--- a/covid/covid.html
+++ b/covid/covid.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html">
+        <a href="../index.html">
         <div class="logo">
                
             <img src="images/logo.png" alt="لوگوی اخبار اویسینا" />
