--- a/usa/usa.html
+++ b/usa/usa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>اخبار اویسینا</title>
+    <title>اخبار  ابن سینا</title>
     <meta charset="UTF-8">
     <link rel="stylesheet"href="../main.css">
 </head>
