--- a/intl/international.html
+++ b/intl/international.html
@@ -4,6 +4,8 @@
     <title>اخبار  ابن سینا</title>
     <meta charset="UTF-8">
     <link rel="stylesheet"href="../main.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
 </head>
 <body>
     <div class="header">
