--- a/covid/covid.html
+++ b/covid/covid.html
@@ -25,26 +25,17 @@
     </div>
     
     <div class="articles">
-        <a href="article1.html" class="article">
-            <h2>مقاله ۱</h2>
-            <p>این توضیحات مقاله ۱ است.</p>
-            <img src="article1.jpg" alt="مقاله ۱" />
+        <a href="COVIDarticles/CA1.html" class="article">
+            <h2>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</h2>
+            <p>این نشان دهنده تغییر به اقدامات بلند مدت برای رسیدگی به ویروس کرونا است.</p>
+            <img src="COVIDimages/COVID1.png" alt="مقاله ۱" />
         </a>
         <a href="article2.html" class="article">
             <h2>مقاله ۲</h2>
             <p>این توضیحات مقاله ۲ است.</p>
             <img src="article2.jpg" alt="مقاله ۲" />
         </a>
-        <a href="article3.html" class="article">
-            <h2>مقاله ۳</h2>
-            <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article3.jpg" alt="مقاله ۳" />
-        </a>
-  <a href="article4.html" class="article">
-            <h2>مقاله ۳</h2>
-            <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
-        </a>
+       
 
         <!-- Add more article cards as needed -->
     </div>
