--- a/covid/COVIDarticles/CA1.html
+++ b/covid/COVIDarticles/CA1.html
@@ -22,6 +22,12 @@
             </div>
             <span>ابن سینا</span>
         </a>
+        <div class="subject-tabs">
+            <a href="covid.html" class="subject-tab">کووید-۱۹</a>
+            <a href="../intl/international.html" class="subject-tab">سلامت بین‌المللی</a>
+            <a href="../iran/iran.html" class="subject-tab">ایران</a>
+            <a href="../usa/usa.html" class="subject-tab">ایالات متحده</a>
+        </div>
     </div>
     
     <div class="article-container">
