--- a/iran/IRarticles/IRarticle1.html
+++ b/iran/IRarticles/IRarticle1.html
@@ -14,6 +14,15 @@
         
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJMDRLSZ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZJMDRLSZ6');
+</script>
 <body>
     <div class="header">
         <a href="../../index.html" class="logo-link">
