--- a/usa/usa.html
+++ b/usa/usa.html
@@ -7,6 +7,15 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJMDRLSZ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KZJMDRLSZ6');
+</script>
 <body>
     <div class="header">
         <a href="../index.html">
