uploaded articles(COVID 2)

--- a/covid/covid.html
+++ b/covid/covid.html
@@ -41,6 +41,11 @@
             <p>این نشان دهنده تغییر به اقدامات بلند مدت برای رسیدگی به ویروس کرونا است.</p>
             <img src="COVIDimages/COVID1.png" alt="مقاله ۱" />
         </a>
+        <a href="COVIDarticles/CA2.html" class="article">
+            <h2>COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.</h2>
+            <p></p>
+            <img src="COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
+        </a>
         
 
         <!-- Add more article cards as needed -->
