updated article date css and put new date

--- a/covid/COVIDarticles/CA2.html
+++ b/covid/COVIDarticles/CA2.html
@@ -52,8 +52,8 @@
             <img src="https://www.avicennanews.me/covid/COVIDimages/covidimage2.jpg" alt="تصویر مقاله ۱" />
         </div>
         <h1 class="article-title"> COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.</h1>
-        <p class="article-date">تاریخ: ۱۰-۸-۲۰۲۳</p>
-                <div class="article-text-container">
+        <p class="article-date">تاریخ: ۱۰ مرداد ۱۴۰۲</p>
+        <div class="article-text-container">
             <p class="article-text">
                 ST. LOUIS (AP) — آتش نشان و پارامدیک مایک کامیلری که یک زمانی هیچ مشکلی در برداشتن تجهیزات سنگین به بالا از راه‌پله‌ها نداشت، اکنون در مبارزه با COVID-19 طولانی، با احتیاط به تردمیل می‌رود تا ببیند قلبش چگونه با یک پیاده‌روی ساده کنار می‌آید.
 
