--- a/covid/COVIDarticles/CA2.html
+++ b/covid/COVIDarticles/CA2.html
@@ -131,6 +131,7 @@ COVID-19 دهه‌ها پیشرفت‌ها را از بین برد، چنگ گف
         <p class="article-byline">
             <a href="https://apnews.com/article/covid19-long-covid-heart-3dd8f26c663e96bffcc2980830626153">نوشته شده توسط AP News</p>
 <p class="article-byline">
+    <a href=""></a>
                 <button class="share-button" onclick="copyLink()">اشتراک‌گذاری صفحه</button>
 </p>
             </div>
