--- a/covid/COVIDarticles/CA2.html
+++ b/covid/COVIDarticles/CA2.html
@@ -127,11 +127,12 @@ COVID-19 دهه‌ها پیشرفت‌ها را از بین برد، چنگ گف
         </div>
         <p class="article-byline">
             <a href="https://www.stockvault.net/photo/234881/Heart-Beat">تصویر: Pixabay</p> 
-        <p class="article-byline">E-mail:ibnsinanews@gmail.com</p>
+        <p class="article-byline">
+             <a href="">E-mail:ibnsinanews@gmail.com</p>
         <p class="article-byline">
             <a href="https://apnews.com/article/covid19-long-covid-heart-3dd8f26c663e96bffcc2980830626153">نوشته شده توسط AP News</p>
 <p class="article-byline">
-    <a href=""></a>
+    <a href="">
                 <button class="share-button" onclick="copyLink()">اشتراک‌گذاری صفحه</button>
 </p>
             </div>
