--- a/covid/COVIDarticles/CA2.html
+++ b/covid/COVIDarticles/CA2.html
@@ -17,8 +17,8 @@
 
 <meta name="twitter:card" content="Heart Graph Beating">
 <meta name="twitter:site" content="Ibn Sina News">
-<meta name="twitter:creator" content="CDC">
-<meta name="twitter:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC">
+<meta name="twitter:creator" content="AP News">
+<meta name="twitter:title" content="COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.">
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="https://avicennanews.me/covid/COVIDimages/covidimage2.jpg">
     <title>COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.</title>
