--- a/covid/covid.html
+++ b/covid/covid.html
@@ -45,7 +45,7 @@
             <h2>COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.</h2>
             <p></p>
             <img src="COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
-            <span class="article-date">تاریخ: ۱۳۹۹/۰۴/۲۶</span>
+            <span class="article-date">تاریخ: ۱۰ مرداد ۱۴۰۲</span>
         </a>
         
 
