--- a/covid/COVIDarticles/CA2.html
+++ b/covid/COVIDarticles/CA2.html
@@ -55,74 +55,57 @@
         <p class="article-date">تاریخ: ۱۰ مرداد ۱۴۰۲</p>
         <div class="article-text-container">
             <p class="article-text">
-                ST. LOUIS (AP) — آتش نشان و پارامدیک مایک کامیلری که یک زمانی هیچ مشکلی در برداشتن تجهیزات سنگین به بالا از راه‌پله‌ها نداشت، اکنون در مبارزه با COVID-19 طولانی، با احتیاط به تردمیل می‌رود تا ببیند قلبش چگونه با یک پیاده‌روی ساده کنار می‌آید.
+                ST. لوئیس (AP) - مایک کامیلری، آتش نشان و امدادگر، زمانی برای حمل وسایل سنگین از نردبان ها مشکلی نداشت. او که اکنون با کووید طولانی مبارزه می کند، با جدیت به روی تردمیل می رود تا یاد بگیرد که چگونه قلبش با یک پیاده روی ساده کنار می آید.
 
-«این مانند آزمون پسرانه‌ای نیست، پس تظاهر نکنید،» به او هشدار داد بت هیوز، فیزیوتراپیست در دانشگاه واشنگتن در سنت لوئیس.
+بث هیوز، فیزیوتراپیست در دانشگاه واشنگتن در سنت لوئیس، هشدار داد: "این یک آزمایش سختگیرانه نیست، بنابراین آن را جعل نکنید."
 
-به نحوی، یک مورد خفیف از COVID-19 زنجیره‌ای از واکنش‌ها را راه‌انداخت که در نهایت باعث می‌شود که کامیلری با افزایش خطر افزایش فشار خون خطرناک، ضربان قلبی که با کوشش کم شتاب می‌کند، و حتی حوادث درد شدید در قفسه سینه رها شود.
+به نوعی، یک مورد خفیف کووید-19 یک واکنش زنجیره‌ای را ایجاد کرد که در نهایت باعث افزایش فشار خون خطرناک، ضربان قلب با فشار خفیف و دوره‌هایی از درد شدید قفسه سینه شد.
 
-او از بسیاری دیگر تنها نیست. چقدر COVID-19 یک تأثیر عمیق بر سلامت قلب ملت گرفته است، سال‌ها پس از شروع این ویروس، هنوز به تازگی در حال ظهور است.
+او از تنهایی دور است چقدر کووید-19 تلفات عمیقی بر سلامت قلب کشور وارد کرده است، سال‌ها پس از همه‌گیری، تازه در حال ظهور است.
 
-«ما اثراتی را بر روی قلب و سیستم عروقی که به واقعیت تعداد اثراتی که بر سایر سیستم‌های عضو بدن وارد می‌کند، را می‌بینیم»، دکتر سوزان چنگ، یک کاردیولوژیست در مرکز پزشکی سینای سدارس در لس آنجلس گفت.
+دکتر سوزان چنگ، متخصص قلب در مرکز پزشکی Cedars-Sinai در لس آنجلس، گفت: «ما اثراتی را روی قلب و سیستم عروقی مشاهده می‌کنیم که متأسفانه بر سایر سیستم‌های اندام تأثیری دارد.
 
-این تنها یک مسئله برای بیماران COVID طولانی مانند کامیلری نیست. تا یک سال پس از موردی از COVID-19، ممکن است افراد در خطر بیشتری برای تجربه مشکل جدید مرتبط با قلب باشند، از لختهای خونی و ضربان نامنظم قلب تا حمله قلبی، حتی اگر در ابتدا به نظر برسد که بهبود یافته‌اند.
+این مسئله تنها برای بیماران مبتلا به کووید طولانی مانند Camilleri نیست. تا یک سال پس از یک مورد کووید-19، افراد ممکن است در معرض افزایش خطر ابتلا به یک مشکل جدید مرتبط با قلب باشند، از لخته شدن خون و ضربان قلب نامنظم گرفته تا حمله قلبی - حتی اگر در ابتدا به نظر می رسد که به خوبی بهبود می یابند. .
 
-از جمله نامعلومی‌ها: چه کسانی احتمال دارند این اثرات پس از COVID را تجربه کنند؟ آیا این اثرات قابل بازگشت هستند - یا این نشانه‌ای از بیماری قلبی بیشتر در زندگی بعدی هستند؟
+در میان ناشناخته ها: چه کسی بیشتر احتمال دارد این عوارض را تجربه کند؟ آیا آنها برگشت پذیر هستند - یا یک علامت هشدار دهنده از بیماری قلبی بیشتر در آینده؟
 
-دکتر زیاد ال-علی، اپیدمیولوژیست بالینی در دانشگاه واشنگتن در سنت لوئیس، به اطلاع رساندن هشدار در مورد مشکلات بهداشتی باقی‌مانده پس از عفونت COVID-19 کمک کرد. (ویدئوی AP / آنجی وانگ)
+دکتر زیاد العلی، اپیدمیولوژیست بالینی در دانشگاه واشنگتن در سنت لوئیس، به صدا درآوردن زنگ خطر در مورد مشکلات سلامتی پس از عفونت COVID-19 کمک کرد. (ویدیو AP/آنجی وانگ)
 
-«ما به زودی به عنوان یک ملت مبتلا به مشکلات قلبی مرتبط با ویروس از این وبا خارج می‌شویم»، به دلیل مشکلات قلبی مرتبط با ویروس گفت دکتر زیاد ال-علی از دانشگاه واشنگتن در سنت لوئیس، که به هشدار از مشکلات بهداشتی باقی‌مانده کمک کرد. عواقب، افزود: «احتمالاً برای نسل‌ها پخش خواهد شد.»
+دکتر زیاد العلی از دانشگاه واشنگتن که در به صدا درآوردن زنگ خطر در مورد مشکلات سلامتی طولانی مدت کمک کرد، گفت: "ما به عنوان یک کشور بیمارتر از این بیماری همه گیر خارج می شویم" به دلیل مشکلات قلبی مرتبط با ویروس. او افزود که پیامدها «احتمالاً برای نسل‌ها تکرار خواهد شد».
 
-بیماری قلب همواره برترین عامل مرگ در کشور و جهان بوده است. اما در ایالات متحده، نرخ مرگ مرتبط با قلب به سطوح پایین تاریخی در سال 2019 کاهش یافته بود، درست پیش از شیوع ویروس.
+___
+بیماری قلبی مدت‌هاست که بیشترین کشنده در کشور و جهان بوده است. اما در ایالات متحده، میزان مرگ و میر ناشی از قلب در سال 2019، درست قبل از شیوع بیماری همه گیر، به پایین ترین حد خود رسیده بود.
 
-COVID-19 دهه‌ها پیشرفت‌ها را از بین برد، چنگ گفت چنگ.
+چنگ گفت COVID-19 یک دهه از این پیشرفت را پاک کرد.
 
-مرگ‌های ناشی از حملات قلبی در هر موج شیوع ویروس افزایش یافت. بدتر این که جوانان به حملات قلبی معمولاً دچار نمی‌شوند، اما تحقیقات دکتر چنگ نشان داده است که تعداد مرگ‌های ناشی از حملات قلبی در گروه سنی 25 تا 44 سال در دو سال اول از شیوع ویروس تقریباً 30 درصد افزایش یافته است.
+مرگ و میر ناشی از حمله قلبی در طول هر افزایش ویروس افزایش می یابد. بدتر از آن، قرار نیست افراد جوان دچار حمله قلبی شوند، اما تحقیقات چنگ افزایش نزدیک به 30 درصدی مرگ و میر ناشی از حمله قلبی را در بین افراد 25 تا 44 ساله در دو سال اول همه‌گیری ثبت کرد.
 
-نشانه‌ای نگران‌کننده برای ادامه این مشکل: فشار خون بالا یکی از بزرگ‌ترین عوامل خطر برای بیماری قلبی است و «فشار خون مردم واقعاً در طول شیوع ویروس افزایش یافته است»، او گفت.
+او گفت که یک علامت شوم این مشکل ممکن است ادامه یابد: فشار خون بالا یکی از بزرگترین خطرات بیماری قلبی است و "فشار خون افراد در واقع در طول این همه گیری به میزان قابل توجهی افزایش یافته است."
 
-علائم قلبی جزو آنچه به عنوان COVID طولانی شناخته می‌شود، عبارت از مجموعه‌ای از مشکلات بهداشتی از جمله خستگی و ماتی مغزی هستند. موسسه ملی بهداشت در حال انجام مطالعات کوچکی از چندین درمان ممکن برای برخی از علائم COVID طولانی است، از جمله مشکل ضربان قلب.
+علائم قلبی عروقی بخشی از چیزی است که به عنوان کووید طولانی شناخته می شود، اصطلاحی است که برای ده ها مشکل بهداشتی از جمله خستگی و مه مغزی شناخته می شود. مؤسسه ملی بهداشت در حال آغاز مطالعات کوچکی درباره چند درمان احتمالی برای برخی از علائم طولانی کووید، از جمله مشکل ضربان قلب است.
 
-دکتر سوزان چنگ، کاردیولوژیست در مرکز پزشکی سینای سدارس در لس آنجلس، تأثیر عمیق COVID-19 بر سلامت قلب ملت را توصیف می‌کند. (صدای AP / آنجی وانگ)
+دکتر سوزان چنگ، متخصص قلب در مرکز پزشکی Cedars-Sinai در لس آنجلس، تلفات عمیقی را که COVID-19 بر سلامت قلب این کشور وارد کرده است، توصیف می کند. (AP Audio/Angie Wang)
 
-اما دکتر چنگ گفت که بیماران و پزشکان همچنان باید بدانند که گاهی اوقات مشکلات قلبی ممکن است اولین یا اصلی علائم آسیبی باشند که ویروس کرونا به جا گذاشته است.
+اما چنگ گفت که بیماران و پزشکان به طور یکسان باید بدانند که گاهی اوقات، مشکلات قلبی عروقی اولین یا اصلی ترین علامت آسیب ناشی از ویروس کرونا است.
 
-«این افرادی هستند که به طور ضروری نخواهند آمد و به دکتر خود بگویند: 'COVID طولانی دارم'»، او گفت.
+او گفت: «اینها افرادی هستند که لزوماً به پزشک خود مراجعه نمی‌کنند و نمی‌گویند: «من مدت‌هاست مبتلا به کووید هستم».
 
-در سنت لوئیس، کامیلری در ابتدا دچار تنگی نفس شد و سپس پس از یک برخورد COVID-19 در پایان سال 2020 رشته‌ای از علائم مرتبط با قلب و مشکلات دیگر را تجربه کرد. او تلاش کرد با درمان‌های مختلفی از چندین پزشک بهبود یابد، تا به اینکه در مرکز COVID طولانی دانشگاه واشنگتن انتها یافت.
+___
+در سنت لوئیس، کامیلیری ابتدا دچار تنگی نفس شد و بعد از آن پس از یک دوره کووید-19 در اواخر سال 2020، یک رشته علائم مرتبط با قلب و سایر علائم ایجاد شد. او درمان‌های متفاوتی را از چندین پزشک امتحان کرد، تا زمانی که در کلینیک طولانی کووید دانشگاه واشنگتن پایان یافت.
 
-«بالاخره برخوردی به سمت جهت درست داشتم»، گفت کامیلری 43 ساله.
+کامیلری 43 ساله گفت: "سرانجام یک چرخش در جهت درست".
 
-در آنجا، او دکتر آماندا ورما را برای مشکلات بیشتری در فشار خون و ضربان قلبش ملاقات کرد. ورما بخشی از تیم قلبی است که گروهی از بیمارانی با علائم قلبی مبهم مانند کامیلری مورد مطالعه قرار داد و نقایصی در جریان خون به عنوان بخشی از مشکل معرفی کرد.
+در آنجا، او دکتر آماندا ورما را برای بدتر شدن مشکل فشار خون و ضربان قلبش دید. Verma بخشی از یک تیم قلب و عروق است که گروه کوچکی از بیماران را با علائم گیج کننده قلبی مانند Camilleri مورد مطالعه قرار دادند و دریافتند که اختلالات در جریان خون ممکن است بخشی از این مشکل باشد.مایک کامیلری، آتش نشان و امدادگر، زمانی مشکلی در حمل و نقل وسایل سنگین از نردبان نداشت. او که اکنون با کووید طولانی مبارزه می کند، با جدیت به روی تردمیل می رود تا یاد بگیرد که چگونه قلبش با یک پیاده روی ساده کنار می آید. (ویدیو AP/آنجی وانگ)
 
-چگونه؟ جریان خون هنگام حرکت مردم افزایش می‌یابد و در طی استراحت کاهش می‌یابد. اما برخی از بیماران COVID طولانی در طی استراحت کاهش کافی در جریان خون نمی‌یابند، زیرا سیستم فعالیت‌های استرسی که کنترل واکنش‌های استرسی را انجام می‌دهد، فعال می‌شود، گفت ورما.
+چگونه؟ جریان خون هنگام حرکت افراد بالا می رود و در هنگام استراحت فروکش می کند. ورما گفت، اما برخی از بیماران مبتلا به کووید طولانی مدت به اندازه کافی قطره در هنگام استراحت دریافت نمی کنند زیرا سیستم جنگ یا گریز که واکنش های استرس را کنترل می کند فعال می ماند.
 
-بعضی دیگر مشکلات در بخشی از رگهای خونی کوچکشان دارند که به درستی تعریق و انقباض نمی‌کنند تا خون را از طریق جریان دهند، او افزود.
+وی افزود: برخی از آنها همچنین با مشکل گشاد نشدن و انقباض مناسب دیواره رگ‌های خونی کوچک خود برای حرکت خون در داخل آنها مشکل دارند.
 
-امیدوارم این توضیحات برخی از علائم کامیلری را توجیه کند، ورما داروهایی را تجویز کرد که عروق خونی را تعریق و دیگر داروها برای آرام کردن واکنش استرسی فعالیت‌های مبارزه یا پروازی تجویز کرد.
+ورما با این امید که به توضیح برخی از علائم کامیلری کمک کند، برخی از داروهای قلبی را تجویز کرد که رگ‌های خونی را گشاد می‌کنند و برخی دیگر را برای کاهش پاسخ جنگ یا گریز.
 
-در باشگاه ورزشی، هیوز، فیزیوتراپیستی که با بیماران COVID طولانی کار می‌کند، بعد از آزمون تردمیل که شکاف‌های نامنظمی را در ضربان قلب کامیلری نشان داد، یک برنامه بازسازی محتاطانه را ایجاد کرد.
+هیوز، یک فیزیوتراپیست که با بیماران مبتلا به کووید طولانی مدت کار می کند، در باشگاه بدنسازی، پس از اینکه آزمایش تردمیل جهش های نامنظم در ضربان قلب کامیلری را نشان داد، یک برنامه توانبخشی دقیق ارائه کرد.
 
-«اگر شما داروهای دکتر ورما را نمی‌گرفتید، وضعیت بدتری داشتید»، او با تمریناتی که در حال انجام آنها دراز می‌کرد و ضربان قلب کامیلری را نظارت می‌کرد گفت. «ما باید سیستم شما را مجدداً سیم‌کشی کنیم» تا واکنش مبارزه یا پروازی را به حالت طبیعی برسانیم.
-
-کامیلری گفت که تغییراتی را که ورما بر اساس واکنش‌های او تجویز کرده بود، متوجه شد. اما یک برخورد دوم با COVID-19 در بهار باعث مشکلات بهداشتی بیشتری شد، که او را مجبور به بازنشستگی کرد.
-
-چقدر ریسک قلب پس از COVID بزرگ است؟ برای متوجه شدن این موضوع، ال-علی از طریق پایگاه داده گسترده اداره کنندگی امور بنیاد خیریه کشور، سوابق پزشکی را تجزیه و تحلیل کرد. افرادی که در اوایل شیوع COVID-19 بیماری را زنده نگه داشته‌اند، به احتمال زیاد نیاز به تجربه ضربان‌های نامنظم قلبی، لختهای خونی، درد قفسه سینه و تپش‌های قلبی داشتند، حتی تا یک سال پس از بهبود نسبت به افراد غیرعفونی. این شامل حتی افراد میان‌سال بدون نشانه‌های قبلی بیماری قلبی است.
-
-بر اساس این نتایج، ال-علی تخمین زده است که 4 نفر از هر 100 نفر نیاز به درمان برای برخی از علائم مرتبط با قلب در سال پس از بهبود از COVID-19 دارند.
-
-در این رابطه، این ریسک کمی است. اما او گفت که بزرگی این وبا به معنای اضافه شدن میلیون‌ها نفر با حداقل یک علامت قلبی است. در حالی که باز هم ممکن است بازخوردی هنوز مشکل‌ساز باشد، ال-علی در حال مطالعه این موضوع است که آیا این ریسک کلی به دلیل واکسیناسیون و سویه‌های کرونا کم‌تر شده است.
-
-پژوهش‌های اخیر نیاز به بهتر درک و رسیدگی به این ضربه‌های قلبی را تأیید می‌کنند. تجزیه و تحلیلی در بهار از پایگاه داده بیمه‌ای بزرگ آمریکا نشان داد که بیماران COVID طولانی در سال پس از عفونت حدود دو برابر احتمال مراجعه به درمان برای مشکلات قلبی از جمله لختهای خونی، ضربان‌های نامنظم قلب و سکته مغزی دارند، نسبت به بیماران مشابهی که از COVID-19 جلوگیری کرده‌اند.
-
-دکتر ورما توضیح داد که ارتباط بعد از عفونت با آسیب به قلب اغراقی نیست. او به تب یک واکنش التهابی به التهاب حلق بدون درمان - به ویژه قبل از گسترش آنتی‌بیوتیک‌ها - که به ساختار دریچه‌های قلبی آسیب می‌زند، اشاره کرد.
-
-«آیا این بیماری ممکن است به عنوان بیماری قلب روماتیسمی بعدی تبدیل شود؟ ما نمی‌دانیم»، او گفت.
-
-اما ال-علی می‌گوید یک پیام ساده در دست است: تاریخچه عفونت‌های COVID-19 را نمی‌توانید تغییر دهید، اما اگر ریسک‌های دیگری مانند کلسترول بالا یا فشار خون بالا، دیابت ناکنترل شده یا سیگاری را نادیده گرفته‌اید، حالا زمان تغییر آن است.
-
-«اینها افرادی هستند که می‌توانیم در مورد آنها کاری انجام دهیم. و فکر می‌کنم در حال حاضر از سال 2019 مهم‌تر هستند»، او گفت.
-
+هیوز با نشان دادن کامیلیری گفت: «اگر شما داروهای دکتر ورما را مصرف نمی‌کردید، اوضاع را بدتر می‌دیدیم.
             </p>
         </div>
         <p class="article-byline">
