--- a/covid/covid.html
+++ b/covid/covid.html
@@ -47,6 +47,12 @@
             <img src="COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
             <span class="article-date">تاریخ: ۱۰ مرداد ۱۴۰۲</span>
         </a>
+        <a href="COVIDarticles/CA3.html" class="article">
+            <h2>واکسن‌های جدید کووید با افزایش نوع «اریس» در راه هستند</h2>
+            <p></p>
+            <img src="COVIDimages/CA3image.jpeg" alt="مقاله ۱" />
+            <span class="article-date">تاریخ:۱۴ اوت ۲۰۲۳</span>
+        </a>
         
 
         <!-- Add more article cards as needed -->
