tried to fix bug

--- a/covid/covid.html
+++ b/covid/covid.html
@@ -120,7 +120,7 @@
             <li><a href="../usa/usa.html">ایالات متحده</a></li>
             <!-- Add more categories as needed -->
         </ul>
-        <a href="https://www.avicennanews.me/about.html" class="about-button">درباره ما</a>
+        <a href="https://www.avicennanews.me/covid/covidabout.html" class="about-button">درباره ما</a>
 
         <button id="email-button" class="email-button">به ما ایمیل بزنید</button>
     </div>
@@ -161,7 +161,7 @@
 <script>
     document.getElementById("small-about-button").addEventListener("click", function () {
         // Redirect the user to the "about.html" page
-        window.location.href = "https://www.avicennanews.me/about.html";
+        window.location.href = "https://www.avicennanews.me/covidabout.html";
     });
 
     document.getElementById("small-email-button").addEventListener("click", function () {
