--- a/covid/covid.html
+++ b/covid/covid.html
@@ -120,7 +120,7 @@
             <li><a href="../usa/usa.html">ایالات متحده</a></li>
             <!-- Add more categories as needed -->
         </ul>
-        <a href="https://www.avicennanews.me/covid/about.html" class="about-button">درباره ما</a>
+        <a href="https://www.avicennanews.me/about.html" class="about-button">درباره ما</a>
 
         <button id="email-button" class="email-button">به ما ایمیل بزنید</button>
     </div>
