updated links to jpg and original webpage

--- a/intl/intlarticles/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html
+++ b/intl/intlarticles/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html
@@ -99,11 +99,11 @@
             </p>
         </div>
         <p class="article-byline">
-            <a href="">Image: George Frey/AFP via Getty</p> 
+            <a href="https://www.gettyimages.com/search/2/image?phrase=george+frey">Image: George Frey/AFP via Getty</p> 
         <p class="article-byline">
              <a href="">E-mail:ibnsinanews@gmail.com</p>
         <p class="article-byline">
-            <a href="https://www.sciencenews.org/article/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html">نوشته ریچارد ون نوردن، برای مجله طبیعت</p>
+            <a href="https://www.nature.com/articles/d41586-024-04014-9">نوشته ریچارد ون نوردن، برای مجله طبیعت</p>
 <p class="article-byline">
     <a href="">
                 <button class="share-button" onclick="copyLink()">اشتراک‌گذاری صفحه</button>
